# check-program

./: Cargo.toml  README.md
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
tests/: integration.rs
