[package]
name = "check"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
solana-program = "=1.8.6"
enum-ordinalize = "3.1.10"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.6"
solana-sdk = "=1.8.6"
solana-validator = "=1.8.6"

[lib]
crate-type = ["cdylib", "lib"]
